// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBadge should render correctly 1`] = `
<span
  className="bpk-badge "
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly when light 1`] = `
<span
  className="bpk-badge bpk-badge--light"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly when success 1`] = `
<span
  className="bpk-badge bpk-badge--success"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly when outline 1`] = `
<span
  className="bpk-badge bpk-badge--outline"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly when destructive 1`] = `
<span
  className="bpk-badge bpk-badge--destructive"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly when inverse 1`] = `
<span
  className="bpk-badge bpk-badge--inverse"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "centered" 1`] = `
<span
  className="bpk-badge  bpk-badge--centered"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "left" 1`] = `
<span
  className="bpk-badge  bpk-badge--docked-left"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "right" 1`] = `
<span
  className="bpk-badge  bpk-badge--docked-right"
>
  Promociando
</span>
`;
